--- a/productos.html
+++ b/productos.html
@@ -5,48 +5,52 @@
 
 <meta charset="utf-8"/>
 
-<title>ivan gonzalez</title>
+<title>VIKINGOS</title>
 </head>
 
 <body id="body">
 
-
   <nav id="menu">
       <ul>
           <li><a href="index.php">ENTRADA</a></li>
-          <li><a href="produktuak.php">TEMPORADAS</a></li>
-          <li><a href="produktuak.php">ACTORER</a></li></li>
-          <li><a href="produktuak.php">MERCHAN</a></li></li>
-          <li><a href="produktuak.php">VIDEOS Y ENLACES</a></li></li>
+          <li><a href="temporadas.php">TEMPORADAS</a></li>
+          <li><a href="actores.php">ACTORES</a></li></li>
+          <li><a href="productos.php">MERCHANDISING</a></li></li>
+          <li><a href="videos.php">VIDEOS Y ENLACES</a></li></li>
           <li></li>
           <li></li>
       </ul>
   </nav>
 
-
 <h1 class="izenburua"> PRODUKTUAK </h1>
 
 <article>
 
-
-
 		<table id="taula">
 			<th>
-				Liburua
+				Producto
 			</th>
 			<th>
-				izena
+				
 			</th>
-
-			 <?php while ($row=$result->fetch_assoc()) { //$row erantzun bat ematen badigu... ?>
-			<!-- taula batean produkten informazio guztia pantailaratuko dugu -->
+			<th>
+				Precio
+			</th>
   			<tr>
-    			<td><?php echo "<a href='infoprod.php?id=".$row['Id']."'> <img src='./IRUDIAK/" . $row['Irudia'] . "' width='150'></img> </a>"; ?></td>
-    			<td><?php echo "<u>" . $row['Izena'] . "</u>" . "<br><br>" . $row['Azalpena'] . "<br>" . "<a href='infoprod.php?id=".$row['Id']."'>informazio gehiago</a>"; ?></td>
+    			<td>Camiseta Vikingos</td>
+    			<td><img src="Imagenes/camiseta-vikingos.jpg"></td>
+					<td>25€</td>
   			</tr>
-
-			<!-- konexioa bukatzeko -->
-			<?php } $conn->close(); ?>
+				<tr>
+					<td>Sudadera Vikingos</td>
+					<td><img src="Imagenes/sudadera-vikingos.jpg"></td>
+					<td>40€</td>
+				</tr>
+				<tr>
+					<td>Gorra Vikingos</td>
+					<td><img src="Imagenes/gorra-vikingos.jpg"></td>
+					<td>12€</td>
+				</tr>
 		</table>
 
 </article>
