--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <meta charset="utf-8"/>
 
-<title>reto0</title>
+<title>VIKINGOS</title>
 </head>
 
 <body id="body">
@@ -16,26 +16,25 @@
 		<li><a href="index.php">ENTRADA</a></li>
 		<li><a href="produktuak.php">TEMPORADAS</a></li>
 		<li><a href="produktuak.php">ACTORER</a></li></li>
-		<li><a href="produktuak.php">MERCHAN</a></li></li>
+		<li><a href="productos.php">MERCHAN</a></li></li>
 		<li><a href="produktuak.php">VIDEOS Y ENLACES</a></li></li>
-		<li></li>
-		<li></li>
 	</ul>
 </nav>
 
 <h1 class="izenburua"> VIKINGOS </h1>
 
 <article>
-	
-		<table id="taula"> 
+
+		<table id="taula">
   			<tr>
-    			<td><h2><u> Nahi duzun literatura aukera zure eskura</u></h2>
+    			<td><h2><u>Serie Vikingos</u></h2>
     				<br>
     				<br>
-    				<img src="./IRUDIAK/libros.png" alt="katalogo" width="500" />
+    				<img src="./imagenes/vikin.jpg" alt="katalogo" width="500" />
     				<br>
     				<br>
-    				<p>Ongi etorri Ivanen liburutegia, hemen hainbat liburu aurkitu dezakezue eta prezio oso onen.<br>Begiratu produktuak eta aukeratu gehien gustatzen zaizkizun liburuak, ez zara dumutuko!!</p>
+    				<p>En esta pagina web encontrareis las diferentes secciones de la serie Vikingos<br>por una parte tenemos las temporadas que hay con una pequeña descipcion de las mismas
+						<br>por otro lado esta la informacion de los actores, tambien tenemos una seccion de merchandising, con camisetas gorras..., y para acabar podras ver el trailer y enlaces de interes</p>
 
     			</td>
   			</tr>
@@ -45,7 +44,7 @@
 </article>
 
 <div id="bukaera">
-<p> -Egilea: Ivan Gonzalez / Telegonoa: 943256487 / TWITTER= @inbentarioaivan / Eskerrikasko gure dendan erosteagatik!!  </p>
+<p> Creadores de la pagina: Endika, jon e ivan, gracias por visitar nuestra pagina web  </p>
 </div>
 
 </body>
