comit menu cambiado

--- a/index.html
+++ b/index.html
@@ -11,15 +11,17 @@
 <body id="body">
 
 
-<nav id="menu">
-	<ul>
-		<li><a href="index.php">ENTRADA</a></li>
-		<li><a href="produktuak.php">TEMPORADAS</a></li>
-		<li><a href="produktuak.php">ACTORER</a></li></li>
-		<li><a href="productos.php">MERCHAN</a></li></li>
-		<li><a href="produktuak.php">VIDEOS Y ENLACES</a></li></li>
-	</ul>
-</nav>
+	<nav id="menu">
+	      <ul>
+	          <li><a href="index.html">ENTRADA</a></li>
+	          <li><a href="temporadas.html">TEMPORADAS</a></li>
+	          <li><a href="actores.html">ACTORES</a></li></li>
+	          <li><a href="productos.html">MERCHANDISING</a></li></li>
+	          <li><a href="videos.html">VIDEOS Y ENLACES</a></li></li>
+	          <li></li>
+	          <li></li>
+	      </ul>
+	  </nav>
 
 <h1 class="izenburua"> VIKINGOS </h1>
 
@@ -33,8 +35,8 @@
     				<img src="./imagenes/vikin.jpg" alt="katalogo" width="500" />
     				<br>
     				<br>
-    				<p>En esta pagina web encontrareis las diferentes secciones de la serie Vikingos<br>por una parte tenemos las temporadas que hay con una pequeña descipcion de las mismas
-						<br>por otro lado esta la informacion de los actores, tambien tenemos una seccion de merchandising, con camisetas gorras..., y para acabar podras ver el trailer y enlaces de interes</p>
+    				<p>Vikings es una serie de televisión de drama histórico creada y escrita por Michael Hirst.<br>Vikings está inspirada en las sagas del vikingo Ragnar Lodbrok, uno de los héroes nórdicos legendarios más conocidos y notorio como el flagelo de Inglaterra y Francia.
+							El programa retrata a Ragnar como un granjero que alcanza la fama con incursiones exitosas en Inglaterra, y finalmente se convierte en un rey escandinavo, con el apoyo de su familia y sus guerreros.</p>
 
     			</td>
   			</tr>
