--- a/productos.html
+++ b/productos.html
@@ -12,11 +12,11 @@
 
   <nav id="menu">
       <ul>
-          <li><a href="index.php">ENTRADA</a></li>
-          <li><a href="temporadas.php">TEMPORADAS</a></li>
-          <li><a href="actores.php">ACTORES</a></li></li>
-          <li><a href="productos.php">MERCHANDISING</a></li></li>
-          <li><a href="videos.php">VIDEOS Y ENLACES</a></li></li>
+          <li><a href="index.html">ENTRADA</a></li>
+          <li><a href="temporadas.html">TEMPORADAS</a></li>
+          <li><a href="actores.html">ACTORES</a></li></li>
+          <li><a href="productos.html">MERCHANDISING</a></li></li>
+          <li><a href="videos.html">VIDEOS Y ENLACES</a></li></li>
           <li></li>
           <li></li>
       </ul>
@@ -31,7 +31,7 @@
 				Producto
 			</th>
 			<th>
-				
+
 			</th>
 			<th>
 				Precio
