Merchandising links imagenes corregidos

--- a/productos.html
+++ b/productos.html
@@ -38,17 +38,17 @@
 			</th>
   			<tr>
     			<td>Camiseta Vikingos</td>
-    			<td><img src="Imagenes/camiseta-vikingos.jpg"></td>
+    			<td><img src="imagenes/camiseta-vikingos.jpg"></td>
 					<td>25€</td>
   			</tr>
 				<tr>
 					<td>Sudadera Vikingos</td>
-					<td><img src="Imagenes/sudadera-vikingos.jpg"></td>
+					<td><img src="imagenes/sudadera-vikingos.jpg"></td>
 					<td>40€</td>
 				</tr>
 				<tr>
 					<td>Gorra Vikingos</td>
-					<td><img src="Imagenes/gorra-vikingos.jpg"></td>
+					<td><img src="imagenes/gorra-vikingos.jpg"></td>
 					<td>12€</td>
 				</tr>
 		</table>
