--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 	<nav id="menu">
 	      <ul>
-	          <li><a href="index.html">ENTRADAAA</a></li>
+	          <li><a href="index.html">ENTRADA</a></li>
 	          <li><a href="temporadas.html">TEMPORADAS</a></li>
 	          <li><a href="actores.html">ACTORES</a></li></li>
 	          <li><a href="productos.html">MERCHANDISING</a></li></li>
