--- a/temporadas.html
+++ b/temporadas.html
@@ -16,7 +16,7 @@
 	      <ul>
 	          <li><a href="index.html">ENTRADA</a></li>
 	          <li><a href="temporadas.html">TEMPORADAS</a></li>
-	          <li><a href="actores.html">ACTORES</a></li></li>
+	          <li><a href="actores.html">ACTORES</a></li>
 	          <li><a href="productos.html">MERCHANDISING</a></li>
 	          <li><a href="videos.html">VIDEOS Y ENLACES</a></li>
 	      </ul>
